# GstreamerPlugins

./: README.md
analytics/: analytics-agent.js
analytics/videoGstPipeline/: VideoGstAnalyzer.cc  VideoGstAnalyzer.h  VideoGstAnalyzerWrapper.cc  VideoGstAnalyzerWrapper.h  binding.pipeline.gyp
gst_plugins/gst-plugin_facerecognition/src/: Makefile.am  gstfacerecognition.c  gstfacerecognition.h
gst_plugins/gst-plugin_facerecognition/src/.deps/: libgstfacerecognition_la-gstfacerecognition.Plo  libgstfacerecognition_la-myplugin.Plo  libgstfacerecognition_la-wrapper.Plo
gst_plugins/gst-plugin_facerecognition/src/.libs/: libgstfacerecognition.lai
gst_plugins/gst-plugin_receiveData/src/: Makefile.am  RawTransport.cpp  RawTransportListenerImpl.h  gstreceivedata.c  gstreceivedata.h  wrapper.cpp  wrapper.h
gst_plugins/gst-plugin_receiveData/src/.deps/: libgstreceivedata_la-RawTransport.Plo  libgstreceivedata_la-gstreceivedata.Plo  libgstreceivedata_la-wrapper.Plo
gst_plugins/gst-plugin_sendSink/src/: Makefile.am  RawTransport.cpp  gstsendsink.c  gstsendsink.h  wrapper.cpp  wrapper.h
gst_plugins/gst-plugin_sendSink/src/.deps/: libgstsendsink_la-RawTransport.Plo  libgstsendsink_la-gstsendsink.Plo  libgstsendsink_la-wrapper.Plo
